-wip: scaner animation

--- a/Evotest/Base.lproj/Main.storyboard
+++ b/Evotest/Base.lproj/Main.storyboard
@@ -18,14 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="db5-Qs-a1v">
-                                <rect key="frame" x="32" y="262" width="311" height="145"/>
-                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="32" y="333.66666666666669" width="311" height="145"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="145" id="uN3-kq-YXA"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACO-WZ-Ysn">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACO-WZ-Ysn" customClass="FlatButton" customModule="Evotest" customModuleProvider="target">
                                 <rect key="frame" x="80" y="698" width="215" height="30"/>
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.27058823529999998" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="IBy-WF-LKG"/>
                                 </constraints>
@@ -36,9 +37,10 @@
                                     <action selector="scanAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8JC-xq-JI2"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dwy-z4-rch">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dwy-z4-rch" customClass="FlatButton" customModule="Evotest" customModuleProvider="target">
                                 <rect key="frame" x="159" y="564" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.27058823529999998" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="cancelScanAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JSu-Gi-iAJ"/>
@@ -49,8 +51,8 @@
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="db5-Qs-a1v" secondAttribute="trailing" constant="32" id="AeJ-PZ-JK4"/>
                             <constraint firstItem="db5-Qs-a1v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="Gvp-xQ-FAv"/>
-                            <constraint firstItem="db5-Qs-a1v" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="174" id="Mbw-Sy-3JV"/>
                             <constraint firstItem="db5-Qs-a1v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hFf-9D-cdO"/>
+                            <constraint firstItem="db5-Qs-a1v" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="j50-bw-P1P"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="ACO-WZ-Ysn" secondAttribute="trailing" constant="80" id="jkz-DA-Edz"/>
                             <constraint firstItem="ACO-WZ-Ysn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lzp-jv-IC8"/>
                             <constraint firstItem="ACO-WZ-Ysn" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="80" id="pcQ-D4-whp"/>
@@ -60,7 +62,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="BARCODE SCANNER" id="YgP-xv-smz"/>
                     <connections>
+                        <outlet property="cancelScanButton" destination="dwy-z4-rch" id="dOC-yQ-ivT"/>
                         <outlet property="scanView" destination="db5-Qs-a1v" id="R0u-XU-dXp"/>
+                        <outlet property="startScanButton" destination="ACO-WZ-Ysn" id="CKm-Wp-heO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
