--- a/Evotest/Base.lproj/Main.storyboard
+++ b/Evotest/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pfg-5k-O7g">
                                 <rect key="frame" x="30" y="74" width="315" height="674"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L2n-a6-IJW">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L2n-a6-IJW">
                                         <rect key="frame" x="8" y="8" width="299" height="299"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="L2n-a6-IJW" secondAttribute="height" multiplier="1:1" id="F9K-jO-hVf"/>
@@ -109,23 +109,40 @@
                                             <action selector="closeDetailsAction:" destination="Q40-HC-blE" eventType="touchUpInside" id="sWE-Ja-7BT"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2wS-cl-djb">
-                                        <rect key="frame" x="16" y="337" width="279" height="20.333333333333314"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="item description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2wS-cl-djb">
+                                        <rect key="frame" x="16" y="333" width="279" height="20.333333333333314"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IXK-QQ-KGS">
+                                        <rect key="frame" x="40" y="315" width="235" height="2"/>
+                                        <color key="backgroundColor" red="0.43137254899999999" green="0.45098039220000002" blue="0.77647058820000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="L1r-NZ-TLg"/>
+                                        </constraints>
+                                    </view>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Dul-NY-D5f">
+                                        <rect key="frame" x="139" y="139" width="37" height="37"/>
+                                        <color key="color" red="0.92156862750000001" green="0.27058823529999998" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </activityIndicatorView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="87B-kf-ecN" firstAttribute="leading" secondItem="Pfg-5k-O7g" secondAttribute="leading" constant="20" id="3or-WB-uuh"/>
-                                    <constraint firstItem="2wS-cl-djb" firstAttribute="top" secondItem="L2n-a6-IJW" secondAttribute="bottom" constant="30" id="4hj-Gh-mrL"/>
+                                    <constraint firstItem="IXK-QQ-KGS" firstAttribute="top" secondItem="L2n-a6-IJW" secondAttribute="bottom" constant="8" id="7Lb-Cg-jhH"/>
                                     <constraint firstAttribute="bottom" secondItem="87B-kf-ecN" secondAttribute="bottom" constant="20" id="8Bz-4u-TyY"/>
+                                    <constraint firstAttribute="trailing" secondItem="IXK-QQ-KGS" secondAttribute="trailing" constant="40" id="FQG-3w-ba9"/>
                                     <constraint firstItem="2wS-cl-djb" firstAttribute="leading" secondItem="Pfg-5k-O7g" secondAttribute="leading" constant="16" id="Flq-OW-bMy"/>
                                     <constraint firstItem="L2n-a6-IJW" firstAttribute="leading" secondItem="Pfg-5k-O7g" secondAttribute="leading" constant="8" id="IpV-5h-hpm"/>
+                                    <constraint firstItem="2wS-cl-djb" firstAttribute="top" secondItem="IXK-QQ-KGS" secondAttribute="bottom" constant="16" id="PQk-Q4-FfM"/>
                                     <constraint firstAttribute="trailing" secondItem="87B-kf-ecN" secondAttribute="trailing" constant="20" id="R7D-ec-ZxS"/>
                                     <constraint firstItem="L2n-a6-IJW" firstAttribute="top" secondItem="Pfg-5k-O7g" secondAttribute="top" constant="8" id="USa-tb-D5E"/>
                                     <constraint firstAttribute="trailing" secondItem="L2n-a6-IJW" secondAttribute="trailing" constant="8" id="WTJ-iD-EDN"/>
+                                    <constraint firstItem="Dul-NY-D5f" firstAttribute="centerX" secondItem="Pfg-5k-O7g" secondAttribute="centerX" id="e1d-dq-54R"/>
+                                    <constraint firstItem="IXK-QQ-KGS" firstAttribute="leading" secondItem="Pfg-5k-O7g" secondAttribute="leading" constant="40" id="ifJ-G0-ePJ"/>
+                                    <constraint firstItem="Dul-NY-D5f" firstAttribute="centerX" secondItem="L2n-a6-IJW" secondAttribute="centerX" id="o4f-Hk-0p4"/>
+                                    <constraint firstItem="Dul-NY-D5f" firstAttribute="centerY" secondItem="L2n-a6-IJW" secondAttribute="centerY" id="uTB-Hn-CLD"/>
                                     <constraint firstAttribute="trailing" secondItem="2wS-cl-djb" secondAttribute="trailing" constant="20" id="zt3-Xn-rUb"/>
                                 </constraints>
                             </view>
@@ -140,6 +157,7 @@
                         <viewLayoutGuide key="safeArea" id="Rz1-Jc-egA"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="Dul-NY-D5f" id="4x8-4b-NUM"/>
                         <outlet property="itemDescription" destination="2wS-cl-djb" id="wwd-6j-U4r"/>
                         <outlet property="itemImage" destination="L2n-a6-IJW" id="2ft-1E-tn1"/>
                         <outlet property="itemView" destination="Pfg-5k-O7g" id="r7C-EL-yAN"/>
